# feijoa

./: .coveragerc  .gitignore  .pyre_configuration  Dockerfile  LICENSE  README.md  codecov.yml  gcc.yaml  main.py  mypy.ini  pyproject.toml  requirements.txt  rosenbrock.yaml  setup.cfg  test_job_198.json  test_job_2861.json  test_job_4347.json  test_job_4743.json  test_job_5488.json  test_job_659.json  test_job_9766.json
.github/workflows/: checks.yml  feijoa.yml  gimeltune.yml  installation.yml  labeler.yml  polytune.yml  publishing.yml  pyre.yml  python-app.yml
benchmarks/: bench.db  calculations.py  dash_app.py  problem.py  problems.py  ranker.py  simplified.py  simplified_suite.py  storage.py  suite.py  test.db  trials.py  utils.py
benchmarks/assets/: stylesheet.css
benchmarks/dashboard/: app.py  dash_mixin.py  layout.py  test.db  utils.py
benchmarks/dashboard/assets/: default.css  style.css  styles.css
benchmarks/dashboard/callbacks/: __init__.py  clientside.py  shared.py  ui.py
benchmarks/dashboard/layouts/: outlined.py  regular.py  span.py
benchmarks/problems/: synthetic.py
docs/source/: conf.py  index.rst  installation.rst
docs/source/reference/: feijoa.importance.rst  feijoa.jobs.rst  feijoa.models.rst  feijoa.plugins.rst  feijoa.rst  feijoa.search.algorithms.rst  feijoa.search.oracles.meta.rst  feijoa.search.oracles.rst  feijoa.search.rst  feijoa.storages.rdb.rst  feijoa.storages.rst  feijoa.utils.rst  feijoa.visualization.rst  index.rst  integration.oracle.rst  integration.rst  modules.rst  oracle.rst  tests.rst
examples/: gcc_matrixmultiply.ipynb  gcc_raytracer.ipynb  gcc_v2-Copy1.ipynb  gcc_v2.ipynb  gcc_v3.ipynb  knn.ipynb  perceptron.py
examples/gcc/: g++-11_Homebrew_GCC_11_2_0_1_11_2_0_search_space.yaml  runner.py  runner_v2.py  runner_v3.py  space_minimal.yaml  space_wided.yaml
examples/gcc/matrixmultiply/: matrixmultiply.cpp
examples/gcc/utils/: extractor.py  extractor_v2.py  run_tools.py  temp_captured.json
examples/notebooks/: dataframes.ipynb  gcc.ipynb  mlp_tuning.ipynb  rosenbrock.ipynb  simple.ipynb
examples/rosenbrock/: runner.py
feijoa/: __init__.py  exceptions.py  insert_license.py
feijoa/importance/: evaluator.py  functional_anova.py  mdi.py  pca.py  rsfanova_boosted.py
feijoa/jobs/: __init__.py  job.py
feijoa/models/: __init__.py  configuration.py  experiment.py  result.py
feijoa/plugins/: __init__.py  plugin.py  reducer.py
feijoa/search/: __init__.py  bandit.py  meta.py  parameters.py  roundrobin.py  seed.py  space.py  visitors.py
feijoa/search/algorithms/: __init__.py  algorithm.py  bayesian.py  genetic.py  grid.py  pattern.py  randomized.py  seed.py  skopt.py  templatesearch.py
feijoa/search/oracles/: bayesian.py  bcmaes.py  finder.py  genetic.py  grid.py  oracle.py  pattern.py  (+1 more)
feijoa/storages/: __init__.py  storage.py  tiny.py
feijoa/utils/: __init__.py  imports.py  logging.py  misc.py  mixins.py  transformers.py
feijoa/visualization/: __init__.py  edf.py  evaluations.py  hist.py  importances.py  optimization_history.py  parallel_coordinates.py
gimeltune/: __init__.py  exceptions.py
gimeltune/jobs/: __init__.py  job.py
gimeltune/models/: __init__.py  experiment.py
gimeltune/search/: bandit.py  meta.py  optimizer.py  parameters.py  roundrobin.py  space.py  visitors.py
gimeltune/storages/: __init__.py  storage.py  tiny.py
gimeltune/utils/: logging.py
integration/: bayesmark_adapter.py  optuna_oracle.py
integration/algorithms/: _skopt.py
integration/oracles/: scikit_opt.py
models/: configuration.py
polytune/: __init__.py  environment.py  exceptions.py  runner.py
polytune/convergence/: impacts_history.py  plugin.py
polytune/jobs/: __init__.py  job.py
polytune/measurement/: measurer.py
polytune/models/: configuration.py  experiment.py  result.py
polytune/search/: __init__.py  optimizer.py  parameters.py  renderer.py  searcher.py  space.py  visitor.py
polytune/storages/: __init__.py  default.py  memory.py  storage.py  tiny.py
polytune/utils/: logging.py  os_dispatch.py  singleton_meta.py
qutune/: environment.py  runner.py
qutune/measurement/: measurer.py
qutune/search/: __init__.py  renderer.py  searcher.py  space.py  visitor.py
tests/: conftest.py  test_bayesian.py  test_bayesian_acquisition.py  test_experiment.py  test_grid_search.py  test_job.py  test_meta.py  test_minimal.py  test_oracle_parser.py  test_parameters.py  test_random_search.py  test_rdb_storage.py  test_result.py  test_seed.py  test_skopt.py  test_space.py  test_templatesearch.py  test_tinydb.py
utils/: configurations.py  helpers.py  logging.py  singleton_meta.py
workloads/: __init__.py  workload.py
workloads/gcc/: runner.py  space.yaml  space_wided.yaml  workload.py
workloads/rosenbrock/: rosenbrock.py  space.yaml  workload.py
(+26 files in other folders)
